Enriching the Vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "version": 2,
+    "buildCommand": "npm run build",
+    "devCommand": "npm run dev",
+    "outputDirectory": "dist",
+    "installCommand": "npm install",
     "builds": [
       {
         "src": "dist/main.js",
