--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+## AUTHENTICATION & AUTHORIZATION
+ACCESS_KEY_SECRET="OOwWPR4ifxAHu+EhZ2iDOtxKoGKwa6tx0i11Ink+DcE="
+PASSWORD_KEY_SECRET="byz9VFNtbRQM0yBODcCb1lrUtVVH3D3x"
+PASSWORD_VECTOR="X05IGQ5qdBnIqAWD"
+API_KEY="zpoQTnQ3yGJNOcOY8JuK9QBv"
+
+## POSTGRES DATABASE
 POSTGRES_URL="postgres://default:9cDwhH3yBGNv@ep-odd-cell-a4laggay-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
