--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "ui/staticfiles"
-      }
-    }
-  ],
+  "builds": [{
+      "src": "vercel_app/wsgi.py",
+      "use": "@ardnt/vercel-python-wsgi",
+      "config": { "maxLambdaSize": "15mb" }
+  }],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "wsgi.py"
-    }
-  ],
-  "outputDirectory": "ui/staticfiles"
+      {
+          "src": "/(.*)",
+          "dest": "vercel_app/wsgi.py"
+      }
+  ]
 }
